--- a/index.qmd
+++ b/index.qmd
@@ -184,13 +184,13 @@ format:
 
 <p class="hero-banner-date">
 
-07.05.2025
+16.05.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Цены снижаются по цепной реакции
+Бензол и стирол берут курс на снижение
 
 </p>
 :::
@@ -204,13 +204,13 @@ format:
 
 <p class="hero-banner-date">
 
-12.05.2025
+19.05.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Экспортные цены в Черном море ползут вниз, в Чикаго - валятся
+USDA прогнозирует рекордный урожай пшеницы в 2025/26 г.
 
 </p>
 :::
