--- a/markets/markets-aromatics.qmd
+++ b/markets/markets-aromatics.qmd
@@ -14,6 +14,14 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-12 .g-col-md-12 .g-col-lg-12}
 ### Котировки
 
+*16.05.2025 Ароматика*
+
+**Бензол и стирол берут курс на снижение**
+
+За прошедшую неделю цены на бензол и стирол не изменились.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *07.05.2025 Ароматика*
 
 **Цены снижаются по цепной реакции**
@@ -30,13 +38,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*18.04.2025 Ароматика*
-
-**Сегмент стройматериалов якорит цены на стирол**
-
-Цены на бензол остаются без изменений, несмотря на формирующиеся предпосылки для «рынка покупателя».
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 ### Демо-подписка
 
