--- a/markets/markets-oil-products.qmd
+++ b/markets/markets-oil-products.qmd
@@ -18,7 +18,7 @@ format:
 
 *14.05.2025 Дизель*
 
-**Дисконты на ДТ возвращаются к значениям января 2025 г**
+**Дисконты на ДТ возвращаются к значениям января 2025 г.**
 
 Снижение морского экспорта дизельного топлива (ДТ) на 13% н/н привело к сужению дисконта Diesel FOB Baltic на 5 долл./т н/н, Diesel Fob Black Sea – на 1 долл./т н/н.
 
