--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -16,11 +16,22 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*14.05.2025 Нефть*
+
+**Торговые переговоры США и Китая переворачивают нефтяной рынок**
+
+После переговоров в конце прошлой недели США и Китай договорились приостановить действие взаимных таможенных пошлин на 90 дней. Это решение встряхнуло нефтяной рынок, и впервые с середины апреля 2025 г. нефтяные котировки перешли к уверенному росту. 
+
+Несмотря на переход к росту нефтяных котировок в конце прошлой недели, цена на нефть Urals не смогла отыграть низкие значения начала недели, и ее среднее значение опустилось почти до 50 долл./барр. Средняя цена на нефть ESPO также упала ниже 59 долл./барр.
+
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *07.05.2025 Нефть*
 
 **Падение фрахтовых ставок сужает дисконты на российскую нефть**
 
-На прошлой неделе ОПЕК+ решил в июне 2025 г. продолжить наращивать добычу нефти. Такое решение усилило «медвежьи» настроения на рынке, и средняя стоимость dated Brent за неделю упала почти на 4,5 долл./барр. 
+На прошлой неделе ОПЕК+ решил в июне 2025 г. продолжить наращивать добычу нефти. Такое решение усилило «медвежьи» настроения на рынке, и средняя стоимость dated Brent за неделю упала почти на 4,5 долл./барр.
 
 Снижение цены dated Brent потянуло за собой и цену на нефть Urals, среднее значение которой в российских портах опустилось почти до 51 долл./барр. Цена на нефть ESPO также упала почти до 60 долл./барр.
 
@@ -45,7 +56,6 @@ format:
 На прошлой неделе введение ограничений США против нефтяных поставок иранской нефти и китайского НПЗ взбодрило нефтяной рынок и привело к росту мировых цен на нефть. По итогам недели средняя стоимость dated Brent выросла на 2 долл./барр. н/н и превысила отметку в 67 долл./барр.
 
 Снижение фрахтовых ставок на перевозку российской нефти способствовало увеличению экспорта нефти Urals примерно на треть, а также сужению дисконта на нее почти на 1 долл./барр. н/н. Дисконт на ESPO откорректировался в сторону расширения примерно на 0,6 долл./барр. н/н после сужения неделей ранее на 1,4 долл./барр. н/н.
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
