--- a/methodology/specs-logistics.qmd
+++ b/methodology/specs-logistics.qmd
@@ -44,29 +44,29 @@ fig-format: svg
 
 Параметры типовой сделки
 
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
-| Параметры                | Условия                                                                                                                                        |
-+==========================+================================================================================================================================================+
-| Вид вагона               | Типовой полувагон                                                                                                                              |
-|                          |                                                                                                                                                |
-|                          | Инновационный вагон                                                                                                                            |
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
-| Срочность                | Перевозка в текущем месяце                                                                                                                     |
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
-| Партия                   | Не менее 100 вагонов                                                                                                                           |
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
-| Груз                     | Уголь (как наиболее массовый вид перевозимого груза по ж/д), а также прочие насыпные и навалочные грузы, улучшающие репрезентативность индекса |
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
-| Загрузка 1 вагона        | 69 т (типовой полувагон),                                                                                                                      |
-|                          |                                                                                                                                                |
-|                          | 75-77 т (инновационный полувагон)                                                                                                              |
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
-| Порожний пробег          | 100% (на станцию отправления)                                                                                                                  |
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
-| Условия оплаты           | Типовые, без рассрочки, без привязки к другим контрактам                                                                                       |
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
-| Вторая сторона сделки    | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                                      |
-+--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
+| Параметры             | Условия                                                                                                                                        |
++=======================+================================================================================================================================================+
+| Вид вагона            | Типовой полувагон                                                                                                                              |
+|                       |                                                                                                                                                |
+|                       | Инновационный вагон                                                                                                                            |
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
+| Срочность             | Перевозка в текущем месяце                                                                                                                     |
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
+| Партия                | Не менее 100 вагонов                                                                                                                           |
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
+| Груз                  | Уголь (как наиболее массовый вид перевозимого груза по ж/д), а также прочие насыпные и навалочные грузы, улучшающие репрезентативность индекса |
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
+| Загрузка 1 вагона     | 69 т (типовой полувагон),                                                                                                                      |
+|                       |                                                                                                                                                |
+|                       | 75-77 т (инновационный полувагон)                                                                                                              |
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
+| Порожний пробег       | 100% (на станцию отправления)                                                                                                                  |
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
+| Условия оплаты        | Типовые, без рассрочки, без привязки к другим контрактам                                                                                       |
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
+| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                                      |
++-----------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
 
 Типовые направления перевозок
 
@@ -112,25 +112,25 @@ fig-format: svg
 
 Параметры типовой сделки
 
-+-----------------------+--------------------------------------------------------------------------------------------------------------------------+
-| Параметры             | Условия                                                                                                                  |
-+=======================+==========================================================================================================================+
-| Вид платформы         | 40-футовая фитинговая платформа                                                                                          |
-|                       |                                                                                                                          |
-|                       | 60-футовая фитинговая платформа                                                                                          |
-|                       |                                                                                                                          |
-|                       | 80-футовая фитинговая платформа                                                                                          |
-+-----------------------+--------------------------------------------------------------------------------------------------------------------------+
-| Срочность             | Долгосрочная аренда (1 года)                                                                                             |
-+-----------------------+--------------------------------------------------------------------------------------------------------------------------+
-| Партия                | Не менее 50 вагонов                                                                                                      |
-+-----------------------+--------------------------------------------------------------------------------------------------------------------------+
-| Условия эксплуатации  | Текущий (отцепочный) ремонт выполняет за счет арендатора; плановый (деповской, капитальный) ремонт – за счет арендодателя|
-+-----------------------+--------------------------------------------------------------------------------------------------------------------------+
-| Условия оплаты        | Типовые, без рассрочки, без привязки к другим контрактам                                                                 |
-+-----------------------+--------------------------------------------------------------------------------------------------------------------------+
-| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                |
-+-----------------------+--------------------------------------------------------------------------------------------------------------------------+
++-----------------------+---------------------------------------------------------------------------------------------------------------------------+
+| Параметры             | Условия                                                                                                                   |
++=======================+===========================================================================================================================+
+| Вид платформы         | 40-футовая фитинговая платформа                                                                                           |
+|                       |                                                                                                                           |
+|                       | 60-футовая фитинговая платформа                                                                                           |
+|                       |                                                                                                                           |
+|                       | 80-футовая фитинговая платформа                                                                                           |
++-----------------------+---------------------------------------------------------------------------------------------------------------------------+
+| Срочность             | Долгосрочная аренда (1 года)                                                                                              |
++-----------------------+---------------------------------------------------------------------------------------------------------------------------+
+| Партия                | Не менее 50 вагонов                                                                                                       |
++-----------------------+---------------------------------------------------------------------------------------------------------------------------+
+| Условия эксплуатации  | Текущий (отцепочный) ремонт выполняет за счет арендатора; плановый (деповской, капитальный) ремонт – за счет арендодателя |
++-----------------------+---------------------------------------------------------------------------------------------------------------------------+
+| Условия оплаты        | Типовые, без рассрочки, без привязки к другим контрактам                                                                  |
++-----------------------+---------------------------------------------------------------------------------------------------------------------------+
+| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                 |
++-----------------------+---------------------------------------------------------------------------------------------------------------------------+
 
 Валюта и единица измерения: руб./вагон-сут. без НДС.
 
@@ -197,7 +197,7 @@ fig-format: svg
 -   станции Китая – сухопутные пограничные переходы – Москва;
 -   прочие внутренние, импортные, экспортные и транзитные направления перевозок грузов в контейнерах железнодорожным транспортом, которые отражают рыночные условия и расширяют базу ответов респондентов.
 
-Валюта и единица измерения: тыс. руб. c учётом НДС 20% (внутренние перевозки), долл. США (международные перевозки). 
+Валюта и единица измерения: тыс. руб. c учётом НДС 20% (внутренние перевозки), долл. США (международные перевозки).
 
 Сроки проведения опроса: 2 раза в месяц, в 1-ю и 3-ю неделю отчетного месяца.
 
@@ -254,28 +254,27 @@ fig-format: svg
 
 Параметры типовой сделки
 
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Параметры                             | Условия                                                                                                         |
-+=======================================+=================================================================================================================+
-| Вид контейнера                        | 40-футовый стандартный или увеличенный по высоте контейнер (40HQ, 40HC)                                         |    
-|                                       | Контейнер CW (Cargo Worthy) – пригодный для транспортировки грузов                                              |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Период пользования                    | До 60 суток с даты забора порожнего контейнера                                                                  |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Срочность                             | Предоставление в текущем месяце                                                                                 |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Партия                                | 1 контейнер                                                                                                     |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Условия эксплуатации                  | Расходы по перемещению, текущим ремонтам и содержанию контейнеров в период пользования несёт арендатор/оператор |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Сбор за возврат контейнера (drop-off) | 0 (включён в ставку)                                                                                            |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Условия оплаты                        | Типовые, без рассрочки, без привязки к другим контрактам                                                        |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Вторая сторона сделки                 | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                       |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
+| Параметры                             | Условия                                                                                                                                    |
++=======================================+============================================================================================================================================+
+| Вид контейнера                        | 40-футовый стандартный или увеличенный по высоте контейнер (40HQ, 40HC) Контейнер CW (Cargo Worthy) – пригодный для транспортировки грузов |
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
+| Период пользования                    | До 60 суток с даты забора порожнего контейнера                                                                                             |
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
+| Срочность                             | Предоставление в текущем месяце                                                                                                            |
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
+| Партия                                | 1 контейнер                                                                                                                                |
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
+| Условия эксплуатации                  | Расходы по перемещению, текущим ремонтам и содержанию контейнеров в период пользования несёт арендатор/оператор                            |
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
+| Сбор за возврат контейнера (drop-off) | 0 (включён в ставку)                                                                                                                       |
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
+| Условия оплаты                        | Типовые, без рассрочки, без привязки к другим контрактам                                                                                   |
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
+| Вторая сторона сделки                 | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                                  |
++---------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------+
 
-Типовые локации выдачи и сдачи контейнеров 
+Типовые локации выдачи и сдачи контейнеров
 
 Ставки предоставления контейнеров оцениваются в следующих локациях:
 
@@ -296,25 +295,21 @@ fig-format: svg
 
 Параметры типовой сделки
 
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Параметры                             | Условия                                                                                                         |
-+=======================================+=================================================================================================================+
-| Вид вагона                            | Четырехосный вагон-хоппер для перевозок зерна и других сыпучих пищевых продуктов с 4-5 загрузочными и 3-6       |    
-|                                       | разгрузочными люками.                                                                                           |
-|                                       | 														  |
-|                                       | Объём кузова до 110 м³, грузоподъёмность до 71 т                                                                |                                                
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Срочность                             | Долгосрочная аренда (от 1 года)                                                                                 |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Партия                                | Не менее 50 вагонов                                                                                             |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Условия эксплуатации                  | Текущий (отцепочный) ремонт выполняет за счет арендатора; плановый (деповской, капитальный) ремонт – 		  |
-|					| за счет арендодателя 											  	  |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Условия оплаты                        | Типовые, без рассрочки, без привязки к другим контрактам                                                        |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Вторая сторона сделки                 | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                       |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
++-----------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Параметры             | Условия                                                                                                                                                                             |
++=======================+=====================================================================================================================================================================================+
+| Вид вагона            | Четырехосный вагон-хоппер для перевозок зерна и других сыпучих пищевых продуктов с 4-5 загрузочными и 3-6 разгрузочными люками. \| Объём кузова до 110 м³, грузоподъёмность до 71 т |
++-----------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Срочность             | Долгосрочная аренда (от 1 года)                                                                                                                                                     |
++-----------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Партия                | Не менее 50 вагонов                                                                                                                                                                 |
++-----------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Условия эксплуатации  | Текущий (отцепочный) ремонт выполняет за счет арендатора; плановый (деповской, капитальный) ремонт – за счет арендодателя                                                           |
++-----------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Условия оплаты        | Типовые, без рассрочки, без привязки к другим контрактам                                                                                                                            |
++-----------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Вторая сторона сделки | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                                                                           |
++-----------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 Валюта и единица измерения: руб./вагон-сут. без НДС.
 
@@ -326,24 +321,23 @@ fig-format: svg
 
 Параметры типовой сделки
 
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Параметры                             | Условия                                                                                                         |
-+=======================================+=================================================================================================================+
-| Вид вагона для перевозки              | Вагон-хоппер (зерновоз), типовой                                      					  |    
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Срочность                             | Предоставление в текущем квартале                                                                               |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Груз                                  | Пшеница (как наиболее массовый вид перевозимого груза в хопперах-зерновозах), а также прочие зерновые культуры, |
-|					| улучшающие репрезентативность индекса                                                                           |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Загрузка 1 вагона          		| До 71 т 													  |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Вид отправки груженого рейса		| Повагонная		                                                                                          |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Условия оплаты                        | Типовые, без рассрочки, без привязки к другим контрактам                                                        |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
-| Вторая сторона сделки                 | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                       |
-+---------------------------------------+-----------------------------------------------------------------------------------------------------------------+
++-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Параметры                     | Условия                                                                                                                                                  |
++===============================+==========================================================================================================================================================+
+| Вид вагона для перевозки      | Вагон-хоппер (зерновоз), типовой \|                                                                                                                      |
++-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Срочность                     | Предоставление в текущем квартале                                                                                                                        |
++-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Груз                          | Пшеница (как наиболее массовый вид перевозимого груза в хопперах-зерновозах), а также прочие зерновые культуры, улучшающие репрезентативность индекса \| |
++-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Загрузка 1 вагона             | До 71 т                                                                                                                                                  |
++-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Вид отправки груженого рейса  | Повагонная                                                                                                                                               |
++-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Условия оплаты                | Типовые, без рассрочки, без привязки к другим контрактам                                                                                                 |
++-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Вторая сторона сделки         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                                                |
++-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 Типовые направления перевозок:
 
