--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,15 +17,27 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*19.05.2025 Пшеница*
+
+**USDA прогнозирует рекордный урожай пшеницы в 2025/26 г.**
+
+Экспортные цены на пшеницу остались на уровне прошлой недели. 
+
+Эфиопия может снизить импорт пшеницы на 24% до 1,3 млн т в 2025/26 г. 
+
+По прогнозам USDA мировое производство пшеницы в 2025/26 г. вырастет на 8,8 млн т до рекордных 808,5 млн т. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *12.05.2025 Пшеница*
 
 **Экспортные цены в Черном море ползут вниз, в Чикаго - валятся**
 
 Экспортные цены на пшеницу снизились еще на 1 долл. по сравнению с прошлой неделей. По итогам первой недели мая фьючерсы на Чикагской бирже СВОТ снизились на 4%.
 
-Засуха в провинции Хэнань угрожает снизить урожай пшеницы в Китае. 
+Засуха в провинции Хэнань угрожает снизить урожай пшеницы в Китае.
 
-Марокко к маю 2025 г. вышло на первое место среди покупателей пшеницы из ЕС, обойдя Нигерию. 
+Марокко к маю 2025 г. вышло на первое место среди покупателей пшеницы из ЕС, обойдя Нигерию.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -35,9 +47,9 @@ format:
 
 Экспортные цены на пшеницу снизились на 1 долл. по сравнению с прошлой неделей.
 
-Россия в 1,5 раза нарастила поставки пшеницы во Вьетнам до 136 тыс. т в январе-марте 2025 г. 
+Россия в 1,5 раза нарастила поставки пшеницы во Вьетнам до 136 тыс. т в январе-марте 2025 г.
 
-Канада может снизить производство твердой пшеницы в 2025/26 г. на 0,5 млн т до 5,4 млн т. 
+Канада может снизить производство твердой пшеницы в 2025/26 г. на 0,5 млн т до 5,4 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -74,18 +86,6 @@ format:
 Беларусь продлила еще на полгода лицензирование экспорта зерновых и рапса.
 
 В крупнейшем аграрном порту Аргентины, Росарио, началась масштабная забастовка, затрудняющая отплытие судов.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*08.04.2025 Пшеница*
-
-**Железнодорожные перевозки зерна – дешево, но мало**
-
-Экспортные цены на пшеницу снизились на 1 долл. по сравнению с прошлой неделей.
-
-США ввели 10% таможенные пошлины против почти всех стран мира и готовятся вводить дополнительные тарифы в отношении ряда стран.
-
-Из-за снижения ставок предоставления вагонов-хопперов в начале второго квартала 2025 г. стоимость перевозки пшеницы по железной дороге снизилась в среднем на 20%.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
